--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<p>hello I'm Locyer</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Locyer_Dashboard</title>
+</head>
+<body>
+    <div>
+        <p>
+            I'm Locyer
+        </p>
+    </div>
+    <p>
+        一个属鼠
+    <img src="1.jpg" alt="属鼠" width="100" height="100">
+    </p>
+</body>
+</html>
